--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <p>my name is akash</p>
     <div>
-        <p style="border: 2px solid tomato;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos reprehenderit harum eius velit quas accusantium cum, explicabo nam voluptate atque aperiam sapiente molestias delectus tempore accusamus quam quo nihil aliquam!</p>
+        <p style="border: 2px solid tomato; background-color:aqua; " >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos reprehenderit harum eius velit quas accusantium cum, explicabo nam voluptate atque aperiam sapiente molestias delectus tempore accusamus quam quo nihil aliquam!</p>
     </div>
 </body>
 </html>
